# internal/adapter/http/dto/estimate.go
@@ -1,15 +1,15 @@
 package dto
 
 type EstimateAmountOutReq struct {
-	In       string
-	Out      string
+	Input    string
+	Output   string
 	AmountIn float64 `json:"amountIn"`
 	LP       uint    `json:"lp"`
 }
 
 type EstimateAmountOutRes struct {
-	In        string
-	Out       string
+	Input     string  `json:"input"`
+	Output    string  `json:"output"`
 	AmountIn  float64 `json:"amountIn"`
 	AmountOut float64 `json:"amountOut"`
 	LP        uint    `json:"lp"`
